--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cloud_firestore: ^3.1.4
+  firebase_storage: ^10.2.4
+  image_picker: ^0.8.4+4
 
 dev_dependencies:
   flutter_test:
