--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cloud_firestore: ^3.1.4
   firebase_storage: ^10.2.4
   image_picker: ^0.8.4+4
+  firebase_auth: ^3.3.4
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
